force-app/main/default/objects/aecm__Process__c/aecm__Process__c.object-meta.xml
<CustomObject>
    <description>Container for a business or IT process, designed to be used in a hierarchy with other processes.</description>
    <label>Process</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>