force-app/main/default/objects/aecm__Process__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to forma 1 to many relationship with a capability, where multiple processes can be related to the same capability.</description>
    <inlineHelpText>Select a capability to establish a one to many relationship, where this process can be one of many to the capability. To form a many to many relationship, use the Capability Processes related list.</inlineHelpText>
    <label>DEPRECATED Capability</label>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipLabel>Processes</relationshipLabel>
    <relationshipName>Processes</relationshipName>
    <type>Lookup</type>
</CustomField>