force-app/main/default/objects/aecm__Process__c/fields/aecm__Capability_Processes_Count__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Processes_Count__c</fullName>
    <description>Count of Capability Processes related to a Process</description>
    <label>Capability Processes Count</label>
    <summaryForeignKey>aecm__Capability_Process__c.aecm__Process__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>