force-app/main/default/objects/aecm__Process__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <inlineHelpText>Provide a brief description of this process.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>