force-app/main/default/objects/aecm__Process__c/fields/aecm__Diagram_URL__c.field-meta.xml
<CustomField>
    <fullName>aecm__Diagram_URL__c</fullName>
    <inlineHelpText>Link to a web based diagram for this process.</inlineHelpText>
    <label>Diagram URL</label>
    <type>Url</type>
</CustomField>