force-app/main/default/objects/aecm__Process__c/fields/aecm__Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>aecm__Estimated_Volume__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Provide an estimated monthly volume of transactions for this process. This figure will drive the annualized cost of the process.</inlineHelpText>
    <label>Estimated Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>