force-app/main/default/objects/aecm__Process__c/fields/aecm__L1__c.field-meta.xml
<CustomField>
    <fullName>aecm__L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a parent process in relation to this processes level in the hierarchical relationship. i.e. If this is an L2 process, then only provide this L1. If this is an L3 process, then provide L1 and L2  parents.</inlineHelpText>
    <label>L1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>aecm__Process__c.aecm__Level__c</field>
            <operation>notEqual</operation>
            <valueField>$Source.aecm__Level__c</valueField>
        </filterItems>
        <infoMessage>Look up window text...</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>aecm__Process__c</referenceTo>
    <relationshipLabel>Processes</relationshipLabel>
    <relationshipName>Processes</relationshipName>
    <type>Lookup</type>
</CustomField>