force-app/main/default/objects/aecm__Process__c/fields/aecm__L2__c.field-meta.xml
<CustomField>
    <fullName>aecm__L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a parent process in relation to this processes level in the hierarchical relationship. i.e. If this is an L3 process, then provide this L2 and an L1 parent.</inlineHelpText>
    <label>L2</label>
    <referenceTo>aecm__Process__c</referenceTo>
    <relationshipLabel>Processes (L2)</relationshipLabel>
    <relationshipName>Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>