force-app/main/default/objects/aecm__Process__c/fields/aecm__L3__c.field-meta.xml
<CustomField>
    <fullName>aecm__L3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a parent process in relation to this processes level in the hierarchical relationship. i.e. If this is an L4 process, then provide this L3, and L1 and L2  parents.</inlineHelpText>
    <label>L3</label>
    <referenceTo>aecm__Process__c</referenceTo>
    <relationshipLabel>Processes (L3)</relationshipLabel>
    <relationshipName>Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>