force-app/main/default/objects/aecm__Process__c/fields/aecm__Level__c.field-meta.xml
<CustomField>
    <fullName>aecm__Level__c</fullName>
    <inlineHelpText>Sets the level of detail with L1 being top level processes areas i.e. Opportunity Management, and L6 a lowest level process detail.</inlineHelpText>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
            <value>
                <fullName>L6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>