force-app/main/default/objects/aecm__Process__c/fields/aecm__Process_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_Completion_Time__c</fullName>
    <inlineHelpText>Cumulative total time in minutes of all underlying process steps.</inlineHelpText>
    <label>Process Completion Time</label>
    <summarizedField>aecm__Process_Step__c.aecm__Completion_Time__c</summarizedField>
    <summaryForeignKey>aecm__Process_Step__c.aecm__Process__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>