force-app/main/default/objects/aecm__Process__c/fields/aecm__Process_Resources__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_Resources__c</fullName>
    <label>Process Resources</label>
    <summarizedField>aecm__Process_Step__c.aecm__Resources__c</summarizedField>
    <summaryForeignKey>aecm__Process_Step__c.aecm__Process__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>