force-app/main/default/objects/aecm__Process__c/fields/aecm__Process_Steps__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_Steps__c</fullName>
    <label>Process Steps</label>
    <summaryForeignKey>aecm__Process_Step__c.aecm__Process__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>