force-app/main/default/objects/aecm__Process__c/fields/aecm__Process_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_Taxonomy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Taxonomy this process is related to, i.e. CRM.</inlineHelpText>
    <label>Process Taxonomy</label>
    <referenceTo>aecm__Process_Taxonomy__c</referenceTo>
    <relationshipLabel>Processes</relationshipLabel>
    <relationshipName>Processes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>