force-app/main/default/objects/aecm__Process__c/fields/aecm__Process_Title__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_Title__c</fullName>
    <description>Container to create a process title different from the process name.</description>
    <formula>Text(aecm__Level__c) + &quot;-&quot; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Title</label>
    <type>Text</type>
</CustomField>