force-app/main/default/objects/aecm__Process__c/fields/aecm__Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Status__c</fullName>
    <inlineHelpText>Provide an indication of a processes status. Reserve &quot;In Use&quot; only for processes that are in active utilization.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
                <default>true</default>
                <label>Proposed</label>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>In Use</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>