force-app/main/default/objects/aecm__Process__c/fields/aecm__Taxonomy_Root__c.field-meta.xml
<CustomField>
    <fullName>aecm__Taxonomy_Root__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag a process record as a level root, i.e. an L1 process with no other levels.</description>
    <inlineHelpText>When selected excludes process from hierarchy reports. Used for root level processes, i.e. an L1 process with no other levels.</inlineHelpText>
    <label>Taxonomy Root</label>
    <type>Checkbox</type>
</CustomField>