force-app/main/default/objects/aecm__Process__c/fields/aecm__Total_Anual_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Total_Anual_Cost__c</fullName>
    <formula>/* cumulative total of all process costs multiplied by the estimated monthly transaction volume. Multiplied by twelve to calculate total estimated annual cost.*/

(aecm__Process_Steps_Cost__c *  aecm__Estimated_Volume__c) * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>