force-app/main/default/objects/aecm__Process__c/validationRules/aecm__TaxanomyRootWithLevelL1.validationRule-meta.xml
<ValidationRule>
    <fullName>aecm__TaxanomyRootWithLevelL1</fullName>
    <active>true</active>
    <errorConditionFormula>(aecm__Taxonomy_Root__c = True)  &amp;&amp; !ISPICKVAL(aecm__Level__c, &apos;L1&apos;)</errorConditionFormula>
    <errorMessage>Only L1 processes can be a taxonomy root.</errorMessage>
</ValidationRule>