force-app/main/default/objects/aecm__Process__c/listViews/aecm__Process_Hierarchy.listView-meta.xml
<ListView>
    <fullName>aecm__Process_Hierarchy</fullName>
    <columns>aecm__Level__c</columns>
    <columns>aecm__Process_Taxonomy__c</columns>
    <columns>NAME</columns>
    <columns>aecm__Taxonomy_Root__c</columns>
    <columns>aecm__L1__c</columns>
    <columns>aecm__L2__c</columns>
    <columns>aecm__L3__c</columns>
    <filterScope>Everything</filterScope>
    <label>Process Hierarchy</label>
</ListView>