force-app/main/default/objects/aecm__Process__c/listViews/aecm__Processes_In_Use.listView-meta.xml
<ListView>
    <fullName>aecm__Processes_In_Use</fullName>
    <columns>NAME</columns>
    <columns>aecm__Description__c</columns>
    <columns>aecm__Level__c</columns>
    <columns>aecm__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Status__c</field>
        <operation>notEqual</operation>
        <value>Retired</value>
    </filters>
    <label>Processes In Use</label>
</ListView>